--- a/Romanian/main/Browser.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Browser.apk/res/values-ro/strings.xml
@@ -194,6 +194,7 @@
     <string name="contextmenu_savelink">Salvaţi linkul</string>
     <string name="contextmenu_send_mail">Trimiteţi un e-mail</string>
     <string name="contextmenu_set_wallpaper">Setaţi ca imagine de fundal</string>
+    <string name="contextmenu_share_image">Partajați imaginea</string>
     <string name="contextmenu_sharelink">Distribuiţi link-ul</string>
     <string name="contextmenu_view_image">Vizualizaţi imaginea</string>
     <string name="contextmenu_webpage_capture">Salvați ca și captură de ecran</string>
@@ -292,7 +293,7 @@ Paginile pe care le accesați nu vor fi stocate în istoricul de navigare​"</s
     <string name="empty_bookmark">Gol</string>
     <string name="empty_history_hint">Istoric gol</string>
     <string name="empty_snapshot_hint">Gol</string>
-    <string name="enable_geolocation_confirm_message">Oprind această caracteristică, este posibil ca unele site-uri să funcționeze necorespunzător.</string>
+    <string name="enable_geolocation_confirm_message">Oprirea serviciilor de localizare va afecta recomandările pe care le primiți.</string>
     <string name="enter_developer_mode">Intraţi în modul dezvoltator</string>
     <string name="enter_incongnito_mode">Intraţi în modul incognito</string>
     <string name="error_console_eval_button_text">Evaluaţi</string>
@@ -493,6 +494,7 @@ Părăsiţi această pagină?"</string>
     <string name="older">Vechi</string>
     <string name="open_app_confirm_message">Permiteți acestei pagini să deschidă %s?</string>
     <string name="open_file_explorer_failed">"Nu s-a putut deschide Exploratorul de fișiere"</string>
+    <string name="open_voice_permission">Permiteți microfonului să se conecteze la internet</string>
     <string name="opening_file_error">Nu se poate deschide fișierul selectat</string>
     <string name="page_info">Informaţii pagină</string>
     <string name="page_info_address">Adresă:</string>
@@ -520,7 +522,9 @@ Părăsiţi această pagină?"</string>
     <string name="pref_automatic_matching_searchengines_title">Comutare la motorul de căutare utilizat cel mai des</string>
     <string name="pref_category_hint">Categorie</string>
     <string name="pref_check_security_url_summary">"Trimiteţi URL-ul către serverele MI pentru a verifica dacă este sigur"</string>
+    <string name="pref_check_security_url_summary_international">Permiteți Browser-ului să acceseze URL-urile pe care le vizitați pentru a primi recomandări mai relevante.</string>
     <string name="pref_check_security_url_title">Verificare securitate URL</string>
+    <string name="pref_check_security_url_title_international">Obțineți URL-ul</string>
     <string name="pref_clear_adblock_statistics">Ștergeţi istoricul anunţurilor blocate</string>
     <string name="pref_clear_adblock_statistics_dlg">Ștergeţi contorul de anunţuri blocate?</string>
     <string name="pref_clear_all_data_dlg">Ștergeți toate datele salvate anterior?</string>
@@ -588,7 +592,7 @@ Părăsiţi această pagină?"</string>
     <string name="pref_privacy_clear_passwords_summary">Ştergeţi toate parolele salvate</string>
     <string name="pref_privacy_cookies_title">Cookie-uri</string>
     <string name="pref_privacy_enable_geolocation">Locaţie</string>
-    <string name="pref_privacy_enable_geolocation_summary">Permiteţi site-urilor să solicite accesul la locaţia dvs.</string>
+    <string name="pref_privacy_enable_geolocation_summary">Permiteţi browser-ului să solicite accesul la locaţia dvs.</string>
     <string name="pref_privacy_formdata_title">Date din formular</string>
     <string name="pref_privacy_location_title">Acces la locaţie</string>
     <string name="pref_privacy_security_title">Confidenţialitate şi securitate</string>
@@ -607,8 +611,6 @@ Părăsiţi această pagină?"</string>
     <string name="pref_ua_string">Agent utilizator</string>
     <string name="pref_version_info">Informaţii despre versiune</string>
     <string name="pref_volume_key_action">Derulare cu ajutorul butoanelor de volum</string>
-    <string name="pref_weather_location_summary">"Utilizată de extensia meteo a browser-ului"</string>
-    <string name="pref_weather_location_title">Locaţie meteo</string>
     <string name="private_browsing_warning">Această funcționalitate nu este disponibilă în versiunea Android curentă.</string>
     <string name="profiler_error_toast">Nu se poate porni Profiler</string>
     <string name="profiler_no_storage_toast">Nu se poate porni Profiler deoarece stocarea externă nu este pregătită</string>
@@ -666,7 +668,7 @@ Părăsiţi această pagină?"</string>
     <string name="same_folder_name_warning">Un grup cu același nume există deja</string>
     <string name="save_button_text">Salvaţi</string>
     <string name="save_dialog_title">Salvaţi</string>
-    <string name="save_file">Salvați %s fișiere</string>
+    <string name="save_file">Salvați fișierul %s</string>
     <string name="save_file_already_exist_alert_message">Un fișier cu același nume există deja, îl înlocuiţi?</string>
     <string name="save_file_already_exist_alert_title">Înlocuiți fișierul?</string>
     <string name="save_form_data_confirm_message">Oprirea acestei caracteristici poate afecta modul de funcționare al telefonului.</string>
@@ -681,6 +683,8 @@ Părăsiţi această pagină?"</string>
     <string name="save_to_camera">Salvaţi în Galerie</string>
     <string name="save_to_camera_failed">"Nu se poate salva imaginea"</string>
     <string name="save_to_camera_success">Salvată în Galerie</string>
+    <string name="scanner_uninstalled_text">Instalați aplicația Scaner pentru a continua</string>
+    <string name="scanner_uninstalled_title">Aplicația Scaner a fost dezinstalată</string>
     <string name="sdcard_error">Verificaţi cardul SD</string>
     <string name="search">Căutare</string>
     <string name="search_baidu">Baidu</string>
@@ -715,10 +719,12 @@ Părăsiţi această pagină?"</string>
     <string name="send_comment_title">Comentariu</string>
     <string name="senddesktop">Ecranul principal</string>
     <string name="sendstartpage">Pagina de pornire</string>
-    <string name="share_page_text">"Mă bucur de %1$s | %2$s"</string>
-    <string name="show_check_security_url_check_tip_dialog_description">URL-ul acestui site va fi trimis la serverele MI pentru a verifica dacă este sigur. Puteți să dezactivați această funcţie oricând în Setări.</string>
+    <string name="share_image_text">Uite ce am găsit!</string>
+    <string name="share_page_text">Uite ce am găsit %1$s | %2$s</string>
+    <string name="show_check_security_url_check_tip_dialog_description">Browser-ul trebuie să se conecteze la internet pentru a funcționa în mod normal. Pentru a îmbunătăți securitatea și pentru a primi recomandări mai relevante, permiteți Browser-ului să obțină URL-urile site-urilor pe care le vizitați și accesul la locație.</string>
+    <string name="show_check_security_url_check_tip_dialog_description_international">Browser-ul trebuie să se conecteze la internet pentru a funcționa în mod normal. Pentru a primi recomandări mai relevante, permiteți Browser-ului să obțină URL-urile site-urilor pe care le vizitați și accesul la locație.</string>
     <string name="show_security_tip_dialog_title">Termenii serviciului</string>
-    <string name="show_weather_location_getter_tip_dialog_description">Serviciile meteo necesită informații despre locație pentru a vă oferi date meteo direct în browser. Puteți să dezactivați această funcţie în Setări.</string>
+    <string name="show_weather_location_getter_tip_dialog_description">Browser-ul trebuie să se conecteze la internet pentru a funcționa în mod normal. Pentru a îmbunătăți securitatea, pentru a primi recomandări mai relevante și informații despre starea vremii, permiteți Browser-ului să obțină URL-urile site-urilor pe care le vizitați și accesul la locație.</string>
     <string name="sign_in_to" formatted="false">Conectaţi-vă la %s1 \"%s2\"</string>
     <string name="skip_button_label">Omiteţi</string>
     <string name="skip_current_version">Omiteţi această versiune</string>
@@ -863,6 +869,11 @@ Părăsiţi această pagină?"</string>
     <string name="video_unknown_duration">Durată necunoscută</string>
     <string name="view_certificate">Vizualizaţi certificatul</string>
     <string name="view_document_downloaded_files">Vizualizați fișierele descărcate în Descărcări</string>
+    <string name="voice_check_network">Verificați setările de rețea și încercați din nou.</string>
+    <string name="voice_connect_network">"Nu s-a putut conecta la rețea."</string>
+    <string name="voice_network_connection">Căutarea vocală trebuie să se conecteze la internet pentru a funcționa în mod normal.</string>
+    <string name="voice_search_permission">Căutarea vocală trebuie să acceseze microfonul pentru a funcționa în mod normal.</string>
+    <string name="voice_semantic_analysis">Browser-ul va putea analiza semantica după ce îi veți permite conectarea.</string>
     <string name="voice_sub_title">"Nu știţi ce să spuneţi? Încercaţi Deschide mi.com!"</string>
     <string name="voice_title">Rostiți comanda dvs…</string>
     <string name="voice_title_distinguish">Procesare…</string>
