--- a/Romanian/main/MiDrop.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiDrop.apk/res/values-ro/strings.xml
@@ -21,7 +21,7 @@
     <string name="cancel_receive_confirm">Anulaţi</string>
     <string name="cancel_receive_stop">Păstrați primirea</string>
     <string name="cancel_stop">Păstrați trimiterea</string>
-    <string name="file_not_support">Acest tip de fișier nu este acceptat</string>
+    <string name="file_not_support">"Acest tip de fișier nu este acceptat."</string>
     <string name="help">Ajutor</string>
     <string name="i_know">OK</string>
     <string name="intro_midrop">Mi Drop</string>
@@ -32,7 +32,7 @@
     <string name="intro_page3_choose_midrop">Selectaţi \"Mi Drop\"</string>
     <string name="intro_page3_choose_midrop2">Selectaţi \"Mi Drop\" și fișierele vor fi trimise instantaneu</string>
     <string name="newText">Text nou</string>
-    <string name="notif_receive_lockscreen">Apăsați pentru a vizualiza detaliile</string>
+    <string name="notif_receive_lockscreen">Apăsați pentru a vizualiza detaliile.</string>
     <string name="notif_send_cancel">Transferul fişierului către %1$s a fost întrerupt</string>
     <string name="notif_send_progress">Trimitere fişiere la %1$s…</string>
     <string name="notif_send_success">Trimiteţi la %1$s</string>
@@ -40,19 +40,19 @@
     <string name="receiver_cancel">Anulaţi</string>
     <string name="receiver_clean">Eliberați spațiu</string>
     <string name="receiver_file_cancel">Transferul fişierului de la %1$s a fost întrerupt</string>
-    <string name="receiver_in_progress_summary">Așteptați ca transferul curent să fie terminat pentru a trimite fișiere noi</string>
+    <string name="receiver_in_progress_summary">Așteptați ca transferul curent să fie terminat pentru a trimite fișiere noi.</string>
     <string name="receiver_in_progress_title">Trimitere fişiere…</string>
-    <string name="receiver_insufficient_storage">Memorie insuficientă</string>
-    <string name="receiver_insufficient_storage_cannot_send">"Nu se poate trimite: memorie insuficientă"</string>
-    <string name="receiver_interrupt_summary">Nu dezactivați conexiunea Wi-Fi atunci când primiţi fișiere</string>
+    <string name="receiver_insufficient_storage">Spațiu de stocare insuficient.</string>
+    <string name="receiver_insufficient_storage_cannot_send">"Nu se poate trimite, spațiu de memorie insuficient"</string>
+    <string name="receiver_interrupt_summary">"Nu dezactivați conexiunea Wi-Fi atunci când primiţi fișiere."</string>
     <string name="receiver_interrupt_summary_v21">Nu dezactivați hotspot-ul Wi-Fi atunci când primiţi fișiere</string>
     <string name="receiver_notification_turn_on">Destinatarul trebuie să pornească Mi Drop</string>
     <string name="receiver_notification_turn_on_help">Porniți pentru a găsi dispozitive și trimite fișiere.</string>
     <string name="receiver_reject">Refuzaţi</string>
     <string name="receiver_succeed_ok">OK</string>
     <string name="receiver_succeed_view">Vizualizaţi</string>
-    <string name="receiver_transfer_interrupt">Transfer întrerupt. Nu dezactivați hotspot-ul Wi-Fi în timpul transferului.</string>
-    <string name="runtime_permission_ungranted">"Nu se poate utiliza Mi Drop din cauza neacordării unei permisiuni"</string>
+    <string name="receiver_transfer_interrupt">"Transfer întrerupt. Nu dezactivați hotspot-ul Wi-Fi în timpul transferului."</string>
+    <string name="runtime_permission_ungranted">Mi Drop necesită unele permisiuni pentru a funcționa în mod normal.</string>
     <string name="send_file_time_format_m">m:s</string>
     <string name="send_file_time_format_s">s</string>
     <string name="sender_cancel">Nu trimiteţi</string>
@@ -62,16 +62,16 @@
     <string name="sender_in_progress_later">Aşteptaţi şi încercaţi din nou</string>
     <string name="sender_in_progress_now">Anulaţi</string>
     <string name="sender_in_progress_title">Anulaţi transferul?</string>
-    <string name="sender_interrupt_summary">"Nu dezactivați conexiunea Wi-Fi atunci când sunt trimise fişiere"</string>
-    <string name="sender_interupt">Transfer întrerupt</string>
+    <string name="sender_interrupt_summary">"Nu dezactivați conexiunea Wi-Fi atunci când sunt trimise fişiere."</string>
+    <string name="sender_interupt">Transfer întrerupt.</string>
     <string name="sender_reject">Nu acceptaţi</string>
-    <string name="sender_reject_kick_off">Vă rog reîncercați mai târziu</string>
+    <string name="sender_reject_kick_off">Așteptați un minut și încercați din nou.</string>
     <string name="sender_return">Înapoi</string>
     <string name="sender_scan_error">Nu s-a putut scana, trimiteți din nou</string>
-    <string name="sender_select_device">Selectaţi şi trimiteţi</string>
-    <string name="sender_transfer_interrupt">Transfer întrerupt. Nu dezactivați conexiunea Wi-Fi în timpul transferului.</string>
-    <string name="sender_wait">Aşteptare</string>
-    <string name="sender_wait_queue">Aşteptare</string>
+    <string name="sender_select_device">Selectaţi un dispozitiv</string>
+    <string name="sender_transfer_interrupt">"Transfer întrerupt. Nu dezactivați conexiunea Wi-Fi în timpul transferului."</string>
+    <string name="sender_wait">Se așteaptă…</string>
+    <string name="sender_wait_queue">Se așteaptă…</string>
     <string name="transfer_interrupt">Transfer întrerupt</string>
     <string name="transmission_click_send">trimiteţi</string>
     <string name="transmission_connect">Nu ați putut găsi destinatarul?</string>
