--- a/Romanian/main/YellowPage.apk/res/values-ro/strings.xml
+++ b/Romanian/main/YellowPage.apk/res/values-ro/strings.xml
@@ -86,6 +86,7 @@
     <string name="express_addressee_name">Numele adresei</string>
     <string name="express_addressee_region">"Regiunea pentru adresă"</string>
     <string name="express_banner_header">%1$s / Număr de urmărire</string>
+    <string name="express_cainiao_banner">Oferit de Cainiao</string>
     <string name="express_cancel_order">Renunțați</string>
     <string name="express_company_list_empty">Nicio companie</string>
     <string name="express_company_phone_prefix">"Contact: "</string>
@@ -103,6 +104,7 @@
     <string name="express_detailed_address">Adresă</string>
     <string name="express_field_empty">Gol</string>
     <string name="express_go_back">Înapoi</string>
+    <string name="express_goods_detail">Detaliile comenzii</string>
     <string name="express_info_divider">" / "</string>
     <string name="express_inqiury_select_logistics">Serviciu de curierat</string>
     <string name="express_inquiry">Urmărire</string>
@@ -140,13 +142,13 @@ Verificați numărul de urmărire."</string>
     <string name="express_inquiry_status_return">Returnat</string>
     <string name="express_inquiry_status_sign_out">Respins</string>
     <string name="express_inquiry_status_unknown">Necunoscut</string>
-    <string name="express_inquiry_trace">Urmărește</string>
-    <string name="express_inquiry_trace_device_login_notice">"Utilizați acest serviciu și pe un alt telefon. Dacă doriți să urmăriți expediția și de pe acest telefon, este necesară verificarea contului dumneavoastră Mi."</string>
-    <string name="express_inquiry_trace_success">Urmărire</string>
-    <string name="express_inquiry_trace_user_notice_content">"Vă vom notifica la modificarea stării expediției."</string>
-    <string name="express_inquiry_untrace">"Nu urmări"</string>
-    <string name="express_inquiry_untrace_success">Urmărire oprită</string>
+    <string name="express_install_cainiao_description_1">Verificarea detaliilor comenzii necesită instalarea Cainiao. O instalați acum?</string>
+    <string name="express_install_cainiao_description_2">Verificarea codului comenzii necesită instalarea Cainiao. O instalați acum?</string>
+    <string name="express_install_cainiao_description_3">Serviciile de livrare necesită instalarea Cainiao. O instalați acum?</string>
+    <string name="express_install_cainiao_ok">Descărcați</string>
+    <string name="express_install_cainiao_title">Instalați Cainiao</string>
     <string name="express_location_failed">"Nu s-a putut obține localizarea dumneavoastră. Introduceți adresa."</string>
+    <string name="express_more_service">Mai multe servicii</string>
     <string name="express_no_address">Gol</string>
     <string name="express_no_order">Nicio comandă</string>
     <string name="express_no_order_info">Nu există informații despre comandă</string>
@@ -185,13 +187,47 @@ Verificați numărul de urmărire."</string>
     <string name="express_sender_info">Informații despre expeditor</string>
     <string name="express_sender_name">Numele expeditorului</string>
     <string name="express_sender_region">"Regiunea expeditorului"</string>
+    <string name="express_setting_authorized_number">Număr de telefon verificat</string>
+    <string name="express_setting_authorized_number_add">Adăugați</string>
+    <string name="express_setting_authorized_number_delete">Ștergeți</string>
+    <string name="express_setting_authorized_number_description">Angajament de confidențialitate: Numărul dvs. de telefon va fi folosit doar pentru verificarea stării livrării comenzii și alte detalii.</string>
+    <string name="express_setting_authorized_number_empty">"Nu v-ați verificat numărul de telefon încă."</string>
+  <string name="express_setting_cainiaoguoguo">菜鸟裹裹</string>
+    <string name="express_setting_code_invalid">"Asigurați-vă că ați introdus codul corect"</string>
+    <string name="express_setting_count_down_time">Încercați din nou în %ds</string>
+    <string name="express_setting_dialog_authority_description">Verificarea numărului de telefon este furnizată de către Pagini Aurii. Aplicația Pagini Aurii trebuie să se conecteze la rețea pentru a funcționa în mod normal. Sunteți de acord?</string>
+    <string name="express_setting_dialog_delete_cancel">Renunțați</string>
+    <string name="express_setting_dialog_delete_description">"Pagini Aurii nu va mai putea urmări livrarea în mod automat după ce veți șterge numărul de telefon. Îl ștergeți oricum?"</string>
+    <string name="express_setting_dialog_delete_failed">"Nu s-a putut șterge numărul de telefon"</string>
+    <string name="express_setting_dialog_delete_ok">Ștergeți</string>
+    <string name="express_setting_dialog_delete_success">Șters cu succes</string>
+    <string name="express_setting_dialog_delete_title">Ștergeți numărul de telefon</string>
+    <string name="express_setting_entrance_description">Verificați-vă numărul de telefon pentru a vedea detaliile comenzii.</string>
+    <string name="express_setting_number">Numărul de telefon</string>
+    <string name="express_setting_number_invalid">"Asigurați-vă că ați introdus un număr de telefon valid"</string>
+    <string name="express_setting_number_save">Verificați și salvați</string>
+    <string name="express_setting_number_title">Adăugați numărul de telefon</string>
+    <string name="express_setting_request_failed">"Nu s-a putut trimite solicitarea. Codul de eroare: %s."</string>
+    <string name="express_setting_service_provider">Furnizorul de servicii</string>
+    <string name="express_setting_title">Număr de telefon verificat</string>
+    <string name="express_setting_tracking_disable">Neverificat</string>
+    <string name="express_setting_verification_code">Cod</string>
+    <string name="express_setting_verification_code_acquire">Primiți codul de verificare</string>
+    <string name="express_setting_verification_code_failed">"Nu s-a putut trimite mesajul SMS"</string>
+    <string name="express_setting_verification_code_hint">Cod SMS</string>
+    <string name="express_setting_verification_code_success">Cod SMS trimis</string>
+    <string name="express_setting_verify_failed">"Nu s-a putut verifica"</string>
+    <string name="express_setting_verify_success">Verificat cu succes</string>
     <string name="express_shortcut_name">Trimiteți sau urmăriți trimiterile express</string>
     <string name="express_show_all_inquiry_history">Arată istoricul solicitărilor</string>
     <string name="express_submit_order">Trimite</string>
   <string name="express_tail_number">număr de ordine</string>
     <string name="express_track_order">Urmărește</string>
     <string name="express_tracking_number">Număr de urmărire</string>
-  <string name="express_urge_order">Ping</string>
+    <string name="express_update_cainiao_description">Este disponibilă o actualizare a aplicației Cainiao. Actualizați acum?</string>
+    <string name="express_update_cainiao_ok">Actualizați</string>
+    <string name="express_update_cainiao_title">Actualizați Cainiao</string>
+    <string name="express_urge_order">Ping</string>
     <string name="express_view_order">Vizualizați comenzile</string>
     <string name="express_view_status">Urmăriți</string>
     <string name="expresss_inquiry_all_logistics">Toate</string>
@@ -268,22 +304,22 @@ Verificați numărul de urmărire."</string>
     <string name="menu_unfollow_yellow_page">Nu mai urmăriți</string>
     <string name="minimum_price">%d RMB/min</string>
     <string name="mishop_web_payment_title">Verificare Magazin Mi</string>
-    <string name="miuishare_account_activate_confirmation">Este necesară activarea</string>
+    <string name="miuishare_account_activate_confirmation">Activați contul Mi</string>
     <string name="miuishare_account_activate_ok">Activați</string>
     <string name="miuishare_account_login_cancel">Renunțați</string>
-    <string name="miuishare_account_login_confirmation">Este necesară autentificarea</string>
+    <string name="miuishare_account_login_confirmation">Conectați-vă la contul Mi</string>
     <string name="miuishare_account_login_ok">Autentificați-vă</string>
-    <string name="miuishare_account_need_activate">Partajarea Weibo necesită asocierea contului Weibo la contul Mi, care nu este activat în prezent. Vă activați contul?</string>
-    <string name="miuishare_account_need_login">Partajarea Weibo necesită asocierea contului Weibo la contul Mi la care sunteți conectat în prezent. Vă conectați acum pentru a partaja?</string>
+    <string name="miuishare_account_need_activate">Partajarea Weibo necesită contul Weibo care este asociat la contul Mi. Activați contul Mi pentru a continua.</string>
+    <string name="miuishare_account_need_login">Partajarea Weibo necesită contul Weibo care este asociat la contul Mi. Activați contul Mi pentru a continua.</string>
     <string name="miuishare_app_name">Partajare MIUI</string>
-    <string name="miuishare_no_network">Nicio rețea de partajat</string>
+    <string name="miuishare_no_network">"Nu s-a putut conecta la rețea"</string>
     <string name="miuishare_publish">Trimiteți</string>
     <string name="miuishare_qzone_title">Qzone</string>
-    <string name="miuishare_share_done">Conținutul partajat a fost trimis.</string>
+    <string name="miuishare_share_done">Conținut partajat cu succes.</string>
     <string name="miuishare_share_editor_title">Partajați</string>
     <string name="miuishare_title_more">Mai multe</string>
     <string name="miuishare_title_share">Partajați</string>
-    <string name="miuishare_wechat_timeline_title">Wechat Timeline</string>
+    <string name="miuishare_wechat_timeline_title">Wechat Moments</string>
     <string name="miuishare_weibo_title">Weibo</string>
     <string name="more_coupons">Toate cupoanele</string>
     <string name="more_express_numbers">Mai multe numere express</string>
